# training-resources-calculator

./: README.md  calculator.py  config.yaml  pyproject.toml
